--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
 anyjson==0.3.3
+BeautifulSoup==3.2.1
 billiard==3.3.0.19
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.7.1
 django-shortuuidfield==0.1.2
 django-toolbelt==0.0.1
+easygui==0.97.2
 feedparser==5.1.3
 gunicorn==19.1.1
 psycopg2==2.5.4
+python-dateutil==2.4.0
 pytz==2014.10
 requests==0.13.2
 shortuuid==0.4.2
+six==1.9.0
 static3==0.5.1
 stripe==1.19.1
