--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 anyjson==0.3.3
 BeautifulSoup==3.2.1
 billiard==3.3.0.19
+chardet==2.3.0
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.7.1
+django-csvimport==2.4
 django-shortuuidfield==0.1.2
 django-toolbelt==0.0.1
 easygui==0.97.2
 feedparser==5.1.3
 gunicorn==19.1.1
+lxml==3.1.2
 psycopg2==2.5.4
 python-dateutil==2.4.0
 pytz==2014.10
